--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <header>
+
     <title>
       Flying Chocolate Competence Challenge
     </title>
@@ -8,6 +9,6 @@
   I plan on sending you a web page that will be functional, hopefully with the calculations requested in the challenge.
    -->
   <body>
-
+<script src="test.js" type="text/javascript"></script>
   </body>
 </html>
