sorting it out...need to refine

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       Flying Chocolate Competence Challenge
     </title>
   </header>
-  <!-- I"m starting to just get stuff in order. 
+  I"m starting to just get stuff in order. 
   I plan on sending you a web page that will be functional, hopefully with the calculations requested in the challenge.
-   -->
+  
   <body>
-<script src="test.js" type="text/javascript"></script>
+<script src="test2.js" type="text/javascript"></script>
   </body>
 </html>
