creating the output page,

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
       Flying Chocolate Competence Challenge
     </title>
   </header>
+  <body>
   I"m starting to just get stuff in order. 
   I plan on sending you a web page that will be functional, hopefully with the calculations requested in the challenge.
+<div class="companies">
+  <img src="InterviewQuestionExample.png" />
+
+</div>
+<div class="input">
+<input id="number" onClick={handleClick}/>
+<p>Please enter a number indicating how much "stuff" you have to sell to the companies above.
+  Please use numbers less than 55, and I haven't tested that high, but it should work, might miss some 5 number combinations
+  because I stopped with 4 iterators. 
+  </p>  
+</div>  
+
+<div class="results">
   
-  <body>
-<script src="test2.js" type="text/javascript"></script>
+</div>
+
+<script src="test3.js" type="text/javascript"></script>
+
+
   </body>
 </html>
