well shoot, I had such ambition!

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
 </div>
 <div class="input">
-<input id="number" onClick={handleClick}/>
+<input id="number" />
+  <button id="amount"> calculate</button>
+
 <p>Please enter a number indicating how much "stuff" you have to sell to the companies above.
   Please use numbers less than 55, and I haven't tested that high, but it should work, might miss some 5 number combinations
   because I stopped with 4 iterators. 
   </p>  
 </div>  
 
-<div class="results">
+<div id="results">
   
 </div>
 
